# esp32-access-system

./: .gitignore  README.md
backend/: .env.example  create_admin.py  main.py  pyproject.toml  reset_password.py
backend/app/: auth.py  database.py  email_utils.py  models.py
backend/app/routers/: access.py  auth.py  bot_api.py  devices.py  users.py
bot/: .env.exmaple  bot.py  pyproject.toml
esp32/: esp32_door.py
esp32/modules/: access.py  buzzer.py  lcd.py  network.py  rfid.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx
frontend/src/components/: MainLayout.jsx
frontend/src/pages/: AccessLogs.jsx  Dashboard.jsx  DeviceManagement.jsx  LoginPage.jsx  NotFound.jsx  UserManagement.jsx
